# iceicebabyv2

./: .gitignore  Cargo.toml  devenv.nix  flake.nix
src/: main.rs
src/gw_observers/: message_create.rs  ready.rs
src/subscriptions/: message_create.rs  ready_event.rs
src/types/: message.rs
src/views/: login.rs  main_view.rs  mod.rs
