[package]
name = "iceicebabyv2"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chorus = { git = "https://github.com/polyphony-chat/chorus.git" }
env_logger = "0.11.6"
iced = { version = "0.13.1", features = ["lazy", "tokio"] }
log = "0.4.25"
tokio = "1.43.0"
